<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.kusoroadeolu</groupId>
    <artifactId>ebs</artifactId>
    <version>0.1.0</version>
    <packaging>pom</packaging>
    <modules>
        <module>ebs-core</module>
        <module>ebs-jmh</module>
        <module>ebs-stress</module>
    </modules>

    <properties>
        <maven.compiler.release>25</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>6.0.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.lincheck</groupId>
            <artifactId>lincheck</artifactId>
            <version>3.5</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>